deleted routes - deleted overflow hidden from about me and portfolio, fixed arrow within contact component, fixed navigation from imprint and privacy policy,

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -11,7 +11,6 @@
   width: 100%; 
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
   box-sizing: border-box;
 }
 
