--- a/src/app/contact-form/contact-form.component.scss
+++ b/src/app/contact-form/contact-form.component.scss
@@ -428,4 +428,8 @@ textarea::placeholder {
   .contact-form-section {
     padding: 10px 0;
   }
+
+  .arrow-wrapper {
+    padding: 12px 0px 50px 0px;
+  }
 }
